<resources>
    <string name="app_name">Online Lecture Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_new_class">Add new class</string>
    <string name="status">status</string>
    <string name="type">Type : </string>
    <string name="lecture_name">Lecture Name : </string>
    <string name="lecture">Lecture #</string>
    <string name="unit">Unit #</string>
    <string name="enter_class_name">Enter Class Name</string>
    <string name="enter_lecture_number">Enter Lecture Number</string>
    <string name="enter_unit_number">Enter Unit Number</string>
    <string name="enter_lecture_name">Enter Lecture Name</string>
    <string name="enter_lecture_type">Enter Lecture Type</string>
    <string name="enter_lecture_duration">Enter Lecture Duration</string>
    <string name="enter_lecture_status">Enter Lecture Status</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="submit">Submit</string>
    <string name="duration">Duration : </string>
    <string name="total_lecture_duration">Total Lecture Duration</string>
    <string name="mins">mins</string>
    <string name="hrs">hrs</string>
    <string name="update_lecture">Update Lecture</string>
    <string name="delete">Delete</string>
</resources>